improving some changes

--- a/Styles/buttons.css
+++ b/Styles/buttons.css
@@ -1,7 +1,7 @@
 .button-contacto{
     padding: 10px;
-    background-color: #7AB800;
-    width: 75%;
+    background-image: linear-gradient(to right ,#5b8900,#7AB800);
+    width: 55%;
     text-align: center;
     border-radius: 20px;
     margin-left: auto;
