--- a/Styles/accordion-menu.css
+++ b/Styles/accordion-menu.css
@@ -1,11 +1,11 @@
 
 
 details div {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 	padding: .5em;
     background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     max-height: 100px;
@@ -27,7 +27,7 @@ details div p, strong {
 }
 
 details div a {
-    background-color: #7AB800;
+    background-image: linear-gradient(to right , #5b8900, #7AB800);
     text-align: center;
     border-radius: 5px;
     padding: 5px;
@@ -60,9 +60,10 @@ summary {
 	padding: .75em 1em;
 	position: relative;
 	padding-left: calc(1.75rem + .75rem + .75rem);
-    background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(to right , #382D24, #604d3e);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    color: white;
 
 }
 
@@ -74,7 +75,8 @@ summary:before {
 	content: "";
 	width: 1.2rem;
 	height: 1.2rem;
-	background-color: #382D24;
+	background-color: white;
+    border: 1px solid #382D24;
     border-radius: 20px;
 	color: #FFF;
 	display: inline-flex;
@@ -84,17 +86,19 @@ summary:before {
 }
 
 details[open] summary {
-	background-image: linear-gradient(to right ,#eeeeee, white);
+    background-image: linear-gradient(to right , #382D24, #604d3e);
     border: 1px solid #b7b7b7;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     font-weight: bold;
     margin-bottom: 0px;
+    color: white;
 }
 
 details[open] summary:before {
 	content: "";
-    background-color: #382D24;
+    background-color: white;
+    border: 1px solid #382D24;
     width: 1.2rem;
 	height: .4rem;
     color: white;
