--- a/Styles/content.css
+++ b/Styles/content.css
@@ -6,29 +6,43 @@
 
 .footer-text{
     text-align: center;
+    background-color: white;
+    padding-top: 10px;
+    margin-top: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.footer-text h5{
+    background-color: white;
 }
 
 .stars{
     width: 100%;
     text-align: center;
+    background-color: white;
 }
 
 
 .stars img{
     width: 50%;
     margin-top: -20px;
+    background-color: white;
 }
 
 .link {
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
+    background-color: white;
 }
 
 .link a {
     text-decoration: none;
     color: #382D24;
     font-weight: bold;
-    font-size: 19px;
-
+    font-size: 14px;
+    background-color: white;
+    padding-bottom: 20px;
 }
